# electrumz

./: .gitignore  CMakeLists.txt  README.md
include/electrumz/: CommandSerializer.h  Commands.h  Config.h  JsonRPCServer.h  NetWorker.h  RPCClient.h  TXO.h  TXODB.h  memstream.h
include/electrumz/bitcoin/: base58.h  block.h  comapt_endian.h  compat_byteswap.h  crypto_common.h  hash.h  key_io.h  script.h  serialize.h  streams.h  transaction.h  uint256.h  util_strencodings.h  zeroafterfree.h
include/electrumz/btc/: block.h  def.h  hash.h  tx.h
proto/: CMakeLists.txt  txo.proto
src/: electrumz.cxx
src/blockchain/: TXODB.cxx
src/blockchain/bitcoin/: base58.cpp  bech32.cpp  block.cpp  cleanse.cpp  key_io.cpp  script.cpp  strencodings.cpp  transaction.cpp  uint256.cpp
src/blockchain/btc/: tx.cxx
src/electrum/: Commands.cxx
src/net/: JsonRPCServer.cxx  JsonRPCServer.h  NetWorker.cxx  NetWorker.h  RPCClient.cxx
src/util/: Config.cxx
test/electrumz_test/: electrumz_test.sln
test/electrumz_test/electrumz_test/: UnitTest1.cs  electrumz_test.csproj
